docroot/themes/humsci/humsci_basic/src/scss/partials/components/_photo-album-slideshow.scss
// Photo Gallery Slideshow

@use '../functions/fonts' as *;
@use '../functions/general' as *;
@use '../functions/color' as *;
@use '../mixins/theme' as *;
@use '../mixins/breakpoints' as *;
@use '../mixins/swiper' as *;
@use '../mixins/buttons' as *;

.hs-gallery-slideshow {
  @include swiper-container;
  @include swiper-arrows;

  .swiper-button-prev,
  .swiper-button-next {
    svg {
      display: none;
    }
  }

  .swiper-button-prev {
    bottom: hb-calculate-rems(98px);

    @include grid-media-min('sm') {
      bottom: hb-calculate-rems(198px);
    }
  }

  .swiper-button-next {
    bottom: hb-calculate-rems(5px);

    @include grid-media-min('sm') {
      bottom: hb-calculate-rems(105px);
    }
  }

  .hb-media-image {
    position: relative;

    &::after {
      content: '';
      position: absolute;
      inset: calc(100% - 78px) 0 0; // match height of caption / credit background

      @include hb-themes(('colorful', 'airy')) {
        background: linear-gradient(to top, color('black', 'global'), transparent);
      }

      @include hb-traditional {
        background: linear-gradient(to top, color('black', 'global'), transparent);
      }
    }
  }

  // prevent double overlay of background when there is a caption / credit
  .field-media-image-caption {
    background: transparent;
  }

  .swiper-pagination {
    display: none;

    @include grid-media-min('sm') {
      display: block;
      width: auto;
      text-align: left;
      color: color('white', 'global');
      font-weight: hb-theme-font-weight(bold);
      bottom: hb-calculate-rems(17px);
      padding-inline-start: hb-calculate-rems(25px);
    }
  }
}

